refactor(tests): Refactor usage of deprecated URL constructor